--- a/tex/main.tex
+++ b/tex/main.tex
@@ -106,7 +106,7 @@
 
 
 \chapter{引言}
-在信息科学领域中，字符串及相关问题一直以来都是研究的热点，其中最具代表性的当属匹配[19]与压缩[]问题。在数据量越来越大的今天，直接对字符串本身进行存储将占用大量空间，如何在其中检索有用的信息也是一大难题。那么对于庞大的字符串集合，要如何将其压缩至尽量小的空间，却又可以尽量快的进行检索呢？
+在信息科学领域中，字符串及相关问题一直以来都是研究的热点，其中最具代表性的当属匹配\cite{knuth1977fast}与压缩\cite{ziv1977universal}问题。在数据量越来越大的今天，直接对字符串本身进行存储将占用大量空间，如何在其中检索有用的信息也是一大难题。那么对于庞大的字符串集合，要如何将其压缩至尽量小的空间，却又可以尽量快的进行检索呢？
 
 
 
@@ -123,17 +123,17 @@
 
 
 \subsection{字符串压缩}
-字符串压缩是计算机科学及相关领域的经典问题。一种与本文相关的压缩方式，称为基于引用的压缩算法[21, 30]，是将被压缩串替换为由其他串的片段构成的引用序列。压缩率取决于字符串间的相似程度，相似度越高则压缩的效果越好。对于某些基因片段来说，这一比率甚至可以达到1,000:1[36]。
+字符串压缩是计算机科学及相关领域的经典问题。一种与本文相关的压缩方式，称为基于引用的压缩算法\cite{deorowicz2011robust, pinho2012green}，是将被压缩串替换为由其他串的片段构成的引用序列。压缩率取决于字符串间的相似程度，相似度越高则压缩的效果越好。对于某些基因片段来说，这一比率甚至可以达到1,000:1\cite{wandelt2013fresco}。
 
 
 
 \subsection{半结构化文档压缩}
-对于倒排文档[4]的压缩一般应用于文本文档的储存中，主要思路是将所有出现的词组用标准压缩方式进行压缩，再基于词组进行索引。该方法对于大多数资料有较高的压缩效率[16]，但并不支持字符串的近似检索。
+对于倒排文档\cite{claude2011indexes}的压缩一般应用于文本文档的储存中，主要思路是将所有出现的词组用标准压缩方式进行压缩，再基于词组进行索引。该方法对于大多数资料有较高的压缩效率\cite{hoobin2011relative}，但并不支持字符串的近似检索。
 
 
 
 \subsection{基于特殊领域的索引压缩}
-对于字符串集合的管理在生物学中十分重要。最近，越来越多的算法致力于用树形的引用结构压缩基因组，并提供近似搜索的可能。该方法可以达到极高的压缩率，但对于大量的长字符串，压缩速度较低。其次，由于检索基于筛选出的特定序列，因此会遗漏部分结果。
+对于字符串集合的管理在生物学中十分重要。最近，越来越多的算法致力于用树形的引用结构压缩基因组，并提供近似搜索的可能\cite{yang2013efficient}。该方法可以达到极高的压缩率\cite{danek2014indexes}，但对于大量的长字符串，压缩速度较低。其次，由于检索基于筛选出的特定序列\cite{siren2014indexing}，因此会遗漏部分结果。
 
 
 
@@ -144,7 +144,7 @@
 
 
 \chapter{压缩与索引}
-这里我们介绍多引用索引结构[]的具体细节，随后我们建立简单的只通过主引用索引的结构，在此基础上再构建基于DAG（Directed Acyclic Graphs）的层次化引用。
+这里我们介绍多引用索引结构\cite{wandelt2015mrcsi}的具体细节，随后我们建立简单的只通过主引用索引的结构，在此基础上再构建基于DAG（Directed Acyclic Graphs）的层次化引用。
 
 
 
@@ -257,7 +257,7 @@
 
 
 \chapter{后缀自动机}
-对于前面的压缩过程，需要在字符串集合中快速匹配模式串的最长前缀。而对于之后的k近似查询，也要找出模式串在集合中出现的所有位置。由于字符串的集合可以动态增加，所选取的数据结构必须能够动态维护。基于上述特性，虽然后缀树也可以满足需求，但本身结构较为复杂。因此，我们选择了较为简洁，却与后缀树效果相同的后缀自动机[]作为主要的数据结构。
+对于前面的压缩过程，需要在字符串集合中快速匹配模式串的最长前缀。而对于之后的k近似查询，也要找出模式串在集合中出现的所有位置。由于字符串的集合可以动态增加，所选取的数据结构必须能够动态维护。基于上述特性，虽然后缀树也可以满足需求，但本身结构较为复杂。因此，我们选择了较为简洁，却与后缀树\cite{ukkonen1995line}效果相同的后缀自动机\cite{ukkonen1993approximate}作为主要的数据结构。
 
 
 
@@ -343,7 +343,7 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 
 \section{k近似匹配}
 在引言中我们说明了k近似匹配的规则，现在我们先介绍如何进行直观的k近似匹配，再介绍如何将其推广到索引结构中。\par
-在经典的k近似匹配算法[]中，有一种称为种子扩展模式的方法。该算法基于这样一个事实：对于长度为$N$的模式串，如果文本串中存在与其编辑距离不超过k的子串，那么模式串与该子串之间必定存在长度至少为$r = \lfloor \frac{N}{k+1} \rfloor$的公共子串。基于这一性质，我们可以先将模式串等分成$k + 1$份种子，对于每个种子先找出它在文本串中的精确匹配。假设匹配位置的下标为$i$，根据编辑距离的特性，近似匹配的结果必然在$[i - (N - r) - k, i + N + k]$这一区间中，之后的求解可以分不同情况使用Shift-or、Bit-parallel等算法。由于该部分可以细分许多情况，十分复杂，在这里我们直接使用滚动数组优化的动态规划算法求解。\par
+在经典的k近似匹配算法\cite{baeza1992fast}中，有一种称为种子扩展模式的方法。该算法基于这样一个事实：对于长度为$N$的模式串，如果文本串中存在与其编辑距离不超过k的子串，那么模式串与该子串之间必定存在长度至少为$r = \lfloor \frac{N}{k+1} \rfloor$的公共子串。基于这一性质，我们可以先将模式串等分成$k + 1$份种子，对于每个种子先找出它在文本串中的精确匹配。假设匹配位置的下标为$i$，根据编辑距离的特性，近似匹配的结果必然在$[i - (N - r) - k, i + N + k]$这一区间中，之后的求解可以分不同情况使用Shift-or、Bit-parallel等算法。由于该部分可以细分许多情况，十分复杂，在这里我们直接使用滚动数组优化的动态规划算法求解。\par
 对于某个种子找出的精确匹配位置$i$，我们与种子前面的模式串$pre$做逆向（从右向左）的动态规划，记录下区间$[i - (N - r) - k, i]$中各个位置到$i$的子串与$pre$的编辑距离结果。再从$i + r$开始与种子后面的模式串$suf$做正向的动态规划，通过类似的过程记录下结果。由于动态规划的转移至多与前一列有关，而我们只关心最后一列的结果，因此可以利用滚动数组将空间降至$O(N)$，如图\ref{imag_dp}所示。将上面两步得出的结果排序后扫描，便可快速得出所有k近似匹配子串。\par
 
 \begin{figure}[htbp]
@@ -358,8 +358,8 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 
 \section{区间覆盖与区间树}
 上一节我们完成了在$PREF$中的k近似匹配，对于其中的某个匹配结果，实质上是一个主引用的子串。如果其他串的某个索引刚好覆盖这一子串，则该结果也必然出现在那个串中。基于这一逻辑，对于$refid$相同的一些$RME$，他们对应的区间存在一定的覆盖关系。如果我们能维护这种覆盖关系，就能从$PREF$中的结果开始，通过宽度优先搜索的方式推出全部$COMP$中的结果。\par
-那我们该如何维护这种关系呢？显然，区间树是个很好的选择。\par
-区间树是一种基于平衡树[]的数据结构。我们都知道，平衡树可以快速维护有序序列，在$O(logN)$的复杂度下完成元素的插入、删除，序列的最值查询等。而区间树则可以维护区间集合及其内部关系，除了可以快速插入、删除区间外，还可以找出覆盖某个区间的所有区间子集，而后者刚好是我们所需要的。图\ref{imag_intvtree}展示了区间树的组织形式。\par
+那我们该如何维护这种关系呢？显然，区间树\cite{cormen2009introduction}是个很好的选择。\par
+区间树是一种基于平衡树的数据结构。我们都知道，平衡树可以快速维护有序序列，在$O(logN)$的复杂度下完成元素的插入、删除，序列的最值查询等。而区间树则可以维护区间集合及其内部关系，除了可以快速插入、删除区间外，还可以找出覆盖某个区间的所有区间子集，而后者刚好是我们所需要的。图\ref{imag_intvtree}展示了区间树的组织形式。\par
 
 \begin{figure}[htbp]
 	\centering
@@ -395,33 +395,46 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 \section{重叠时的匹配}
 经过前面的步骤，我们已经完成了大部分结果的匹配，但还有一小部分的遗漏。如果$COMP$中的结果跨越不止一个$RME$，只考察区间覆盖的话并不能涉及这种情况。因此我们还需要最后一步，找出跨越$RME$交点的匹配结果。\par
 如果模式串的长度最多为$maxn$，而询问的误差最多为$maxk$，由于编辑距离的特性，令$\delta = maxn + maxk - 1$，则跨越$RME$的结果必然在以$mismatch$为中心的长度为$\delta * 2 + 1$的区间内。
-我们可以再用一个$SAM$来维护每个$RME$对应区间里的字符串，和$PREF$一样将它们全部连接起来插入$SAM$中，然后像之前的过程一样进行查询即可。需要注意的是，在$RME$长度较短而$\delta$较大时这些区间可能会重叠，重复插入会浪费空间与构造速度，插入时跳过已经插入的前缀即可。\par
-至此我们已经完成了在索引结构中进行k近似匹配的所有步骤，总结起来分以下三步：1）在主引用中利用$SAM$与动态规划匹配结果；2）通过区间树将之前的结果扩展到$COMP$集合中$RME$内部的结果；3）通过与第一步类似的方式找出跨越$RME$的结果。下面我们举一个简单的例子：\par
+我们可以再用一个$SAM$来维护每个$RME$对应区间里的字符串，和$PREF$一样将它们全部连接起来插入$SAM$中，称为$OVLP$，然后像之前的过程一样进行查询即可。需要注意的是，在$RME$长度较短而$\delta$较大时这些区间可能会重叠，重复插入会浪费空间与构造速度，插入时跳过已经插入的前缀即可。下面我们以2.3节中的例子作为演示：\par
 
 
 
+\section{样例演示}
+这里我们令$maxn = 3$，$maxk = 1$，检索的模式串为"ivk"。\par
+\begin{itemize}
+	\item 首先我们将模式串按照规则划分为两个种子："i"与"vk"，由于"vk"在所有字符串中都没有精确匹配，这里我们只考虑关于"i"的结果。
+	\item 接着我们在$PREF$中进行匹配，对于$s_{1}$我们精确匹配"i"后得到"ick"满足条件，而在$s_{5}$中则匹配到"ink"。故当前的答案\\
+		$result = \{(s_{1}, 9, 3, "ick"), (s_{5}, 1, 3, "ink")\}$
+	\item 然后在$OVLP$中进行匹配，此时的$OVLP$为\\
+		aton|Aho/Cora|sick|Aho/Cora|mata|matas|Tree|inkCut Tree\\
+		找到$s_{2}$中的"ick"与$s_{6}$中的"ink"，当前答案\\
+		$result = \{(s_{1}, 9, 3, "ick"), (s_{2}, 9, 3, "ick"), (s_{5}, 1, 3, "ink"), (s_{6}, 1, 3, "ink")\}$
+	\item 最后要在区间树中搜索答案。$s_{1}$对应的区间树如图\ref{imag_intvtree1}所示，查询区间$[9, 11]$找到$s_{3}$中的$[4, 19]$。之后根据$s_{2}$的区间树得出$s_{4}$中的区间$[0, 19]$，根据$s_{5}$的区间树找出$s_{6}$的区间$[0, 3]$。至此得出所有的覆盖区间，结合$RME$的$offset$得到最终答案\\
+		$result = \{(s_{1}, 9, 3, "ick"), (s_{2}, 9, 3, "ick"), (s_{3}, 9, 3, "ick"),\\
+		{\qquad \qquad}(s_{4}, 9, 3, "ick"), (s_{5}, 1, 3, "ink"), (s_{6}, 1, 3, "ink")\}$
+\end{itemize}
 
-\chapter{模板}
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.35]{image/intvtree1.png}
+	\caption{$s_{1}$的区间树}\label{imag_intvtree1}
+\end{figure}
 
-我们建立了一个尽可能符合《中山大学本科生毕业论文(设计)写作与印制规范》的\LaTeX 模版，容许任何人自由使用，然而我们无法保证它是否完全符合学校的相关要求，甚至不保证它可以正常编译\endnote{反正我是可以正常编译。}。对于使用此模版造成的任何后果，本人不负有任何责任。
+至此我们已经完成了在索引结构中进行k近似匹配的所有步骤，总结起来分以下三步：1）在主引用中利用$SAM$与动态规划匹配结果；2）通过与第一步类似的方式找出$COMP$中跨越$RME$的结果；3）通过区间树将之前的结果扩展到$RME$内部的结果。需要注意的是，第二步与第三步不能交换，因为跨过$RME$的结果可能被某个索引完全覆盖。
 
-关于参考文献的bib条目格式参考\texttt{main.bib}~\cite{article}\cite{book}\cite{phdthesis}\cite{inproc}\cite{masterthesis}\cite{manual}\cite{report}\cite{database}\cite{software}\cite{standard}\cite{newspaper}\cite{patent}。
 
-%篇末注（非常抱歉只支持最多10个，在正文通过\endnote{}命令生成）
-\displayendnotes
 
-%参考文献是毕业设计(论文)不可缺少的组成部分,它反映毕业设计(论文)的取材来源、材料的广博程度和材料的可靠程度,也是作者对他人知识成果的承认和尊重。一份完整的参考文献可向读者提供一份有价值的信息资料,列入的文献应在 10 篇以上,其中外文文献在 2 篇以上。
 \zihao{-5}\songti
 \bibliographystyle{sysuthesis}
-\bibliography{main}%假定bib文件为main.bib
+\bibliography{main}
+
+
 
 \appendix
 
 \begin{thankto}
 
 	\songti\zihao{-4}
-	%谢辞应以简短的文字对课题研究与论文撰写过程中曾直接给予帮助的人员(例如指导教师、答疑教师及其他人员)表示对自己的谢意,这不仅是一种礼貌,也是对他人劳动的尊重,是治学者应当遵循的学术规范。内容限一页。
-	%以下为致谢内容
 	致谢内容
 
 	\vskip 18pt
@@ -430,24 +443,6 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 		\today
 	\end{flushright}
 \end{thankto}
-
-%对于一些不宜放在正文中的重要支撑材料,可编入毕业论文的附录中。包括某些重要的原始数据、详细数学推导、程序全文及其说明、复杂的图表、设计图纸等一系列需要补充提供的说明材料。如果毕业设计(论文)中引用的实例、数据资料,实验结果等符号较多时,为了节约篇幅,便于读者查阅,可以编写一个符号说明,注明符号代表的意义。附录的篇幅不宜太多,一般不超过正文。
-%接下来是附录部分，以\chapter{附录标题}开始一个新的附录
-\chapter{记号约定}
-\songti\zihao{-4}
-\begin{longtable}{ll}
-	记号 & 说明\\
-	\endfirsthead
-	记号 & 说明\\
-	\endhead
-	\endfoot
-	\endlastfoot
-	$A \cup B$ & 集合$A$与集合$B$的并集\\
-	$A \cap B$ & 集合$A$与集合$B$的交集\\
-	$A \setminus B$ & 集合$A$与集合$B$的差集\\
-	$A \times B$ & 集合$A$与集合$B$的直积\\
-	$A / \simeq$ & 集合$A$关于等价关系$\simeq$的商集\\
-\end{longtable}
 
 \backmatter
 
