--- a/tex/main.tex
+++ b/tex/main.tex
@@ -428,7 +428,7 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 
 
 \chapter{实验结果}
-实验的部分，我们将分别以DNA序列与Wiki百科历史版本作为实验数据，考察算法的压缩效率及检索速度。同时，通过数据量与压缩速度、压缩率的关系，考察算法是否为线性复杂度。
+实验的部分，我们将分别以DNA突变序列与Wiki百科历史版本作为实验数据，考察算法的压缩效率及检索速度。同时，通过数据量与压缩速度、压缩率的关系，考察算法是否为线性复杂度。
 
 
 
@@ -437,7 +437,7 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 
 
 
-\section{突变DNA序列}
+\section{DNA突变序列}
 这里我们选取了人类基因组计划的染色体文本数据，对每条染色体取其前1,000行DNA序列，随后模拟自然环境下的变异、交叉互换等规则，生成一系列基因突变后的DNA序列。对数据进行压缩后，检索DNA片段"ATCGATCGG"在误差$k = 1$时出现的所有位置，结果如表格\ref{tab:dnacompress}所示。\par
 
 \begin{longtable}{crrrrrr}
@@ -561,7 +561,10 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 
 
 
-\chapter{结语}
+\chapter{结论}
+本文首先表述了字符串压缩与检索相结合的技术在当下的实际意义，然后介绍了字符串压缩的具体思路——基于多引用的层次化索引结构。为了解决压缩过程中需要的字符串集合中的模式匹配问题，也为之后的k近似匹配打下基础，我们引入了一种简洁的数据结构——后缀自动机，并介绍了它的算法原理及构造方式。由于后缀自动机的复杂度是线性的，因此保证了构造的时间与最终的空间开销与读入规模一致。在之后我们介绍了利用后缀自动机进行k近似匹配的方式，并通过区间树与特殊情况的处理，将匹配扩展到整个索引结构中，从而实现了近似检索的功能。最后我们通过对DNA突变序列及Wiki百科历史文档的实验，验证了算法的压缩速度、压缩率及检索速度，并考察了算法复杂度与数据规模的线性关系，证明了算法的有效性及高效性。\par
+但该算法也有一定的不足之处：1）虽然做到了动态查询，支持边插入边查询的功能，但无法完成对字符串集合的删除及修改等操作；2）由于最优索引结构是NP问题，本文只提出了一个基于贪心策略的较优的构建方式，没有探究更优的策略；3）在基于后缀自动机的k近似匹配中，仅使用了滚动数组优化的动态规划算法，还有改进的空间；4）区间数与边界情况的处理复杂度略高，需要更优的数据结构进行优化等。对于上述的不足，还有待以后的研究与改进。\par
+最后，后缀树作为处理字符串模式匹配的经典方式，已经得到了广泛的应用。而与之功能相仿的后缀自动机，则拥有更简洁的实现方式，在诸如子串计数等问题上甚至有着更优的表现。可见，发挥数据结构对于不同问题的能力，对算法的优化方面很有意义。
 
 
 
