--- a/tex/main.tex
+++ b/tex/main.tex
@@ -45,24 +45,24 @@
 
 %第一次过程检查的学生总结
 \firstcheck{
-	阅读了几篇关于字符串压缩、字符串k近似匹配的论文，学习了解决这两个问题较为常见的思路、方法。
+	阅读了几篇关于字符串压缩、字符串k近似匹配的论文，学习解决这两个问题较为常见的思路、方法。
 }
 %第一次过程检查的指导老师意见
-\firstopinion{\rule{0cm}{2\baselineskip}}
+\firstopinion{先实现已有的算法，对比试验结果，再继续深入研究、实现复杂的策略并改善原有的策略。}
 %第二次过程检查的学生总结
 \secondcheck{
 	大致构建了压缩的算法、查询的算法框架，考虑用后缀数组或者后缀树做字符串匹配。\\
 	从部分结果进行扩展时，似乎可以使用函数式线段树查询区间，但空间复杂度略高。
 }
 %第二次过程检查的指导老师意见
-\secondopinion{\rule{0cm}{2\baselineskip}}
+\secondopinion{修改部分算法的实现形式，通过实验找出最合适的算法。}
 %第三次过程检查的学生总结
 \thirdcheck{
 	最终选择了较为简洁的后缀自动机作为主要的数据结构进行字符串匹配，区间的查询可用区间树维护。\\
 	完成了总体的代码，压缩率一般，继续考虑较为细节的策略。
 }
 %第三次过程检查的指导老师意见
-\thirdopinion{\rule{0cm}{2\baselineskip}}
+\thirdopinion{可针对不同数据类型进行实验，以此寻找改进的策略。}
 %整体完成情况的指导老师意见
 \overallopinion{\rule{0cm}{4\baselineskip}}
 
@@ -112,7 +112,7 @@
 
 \section{背景}
 近年来，随着信息技术在基因工程方面的普及，越来越多的DNA序列问题依赖计算机来处理。例如在研究基因突变时，由于突变率较低，必须记录下大量实验数据，再找出其中与原DNA序列近似的片段。其他方面，网络知识库的加速更迭，使得历史版本的存储带来挑战。在Wiki条目中，对于某个名词，可能存在许多类似的别称，需要一种近似检索的策略。\par
-在字符串检索领域中有一种较为重要的方式——k近似匹配：在一个字符串集合中，找出与模式串之间编辑距离不超过k的所有子串，其中编辑距离表示将模式串通过插入、修改、删除变为目标串的最小修改次数。传统的k近似匹配基本只用到两种方法：1）对于集合内的字符串分别处理；2）将集合内的字符串拼接起来处理。这两种方法的局限性在于，存储所占用的空间至少是所有字符串长度之和。由于自然语言的特性，许多语句之间具有极强的关联性，可以通过其中的某一句话的片段，表达其他句子的部分信息，从而达到压缩存储的目的。因此，越来越多研究开始尝试先选择一些字符串作为索引，再将与之相似的串通过引用进行压缩的方法。此时，k近似匹配变成了两个问题：1）在索引集合中检索；2）找出与该索引串相似的引用串。这种方法的问题在于，只有索引中的匹配是精确的，引用串只是与索引串相似，而非模式串。\par
+在字符串检索领域中有一种较为重要的方式——k近似匹配：在一个字符串集合中，找出与模式串之间编辑距离不超过k的所有子串，其中编辑距离表示将模式串通过插入、修改、删除操作变为目标串的最小修改次数。传统的k近似匹配基本只用到两种方法：1）对于集合内的字符串分别处理；2）将集合内的字符串拼接起来处理。这两种方法的局限性在于，存储所占用的空间至少是所有字符串长度之和。由于自然语言的特性，许多语句之间具有极强的关联性，可以通过其中的某一句话的片段，表达其他句子的部分信息，从而达到压缩存储的目的。因此，越来越多研究开始尝试先选择一些字符串作为索引，再将与之相似的串通过引用进行压缩的方法。此时，k近似匹配变成了两个问题：1）在索引集合中检索；2）找出与该索引串相似的引用串。这种方法的问题在于，只有索引中的匹配是精确的，引用串只是与索引串相似，而非模式串。\par
 因此，找出一种将两者结合起来，在保证数据压缩存储的同时，兼备高效检索能力的算法是十分有意义的。
 
 
@@ -150,8 +150,8 @@
 
 \section{符号定义}
 首先我们介绍一下本章节用到的定义及符号表示。\par
-一个字符串$s$表示一个关于字符集$\Sigma$的有限序列，长度用$|s|$表示。两个字符串的连接用$s \circ t$表示。从下标$i$开始的长度为$n$的字符串用$s(i, n)$表示，特别的对于长度为$1$的子串（即一个字符）用$s[i]$表示，注意这里的下标从0开始。对于两个字符串$s$与$t$，如果他们之间的编辑距离不超过k，即$s$可以通过至多k次插入、修改、删除操作变为$t$，则称之$s$与$t$为k近似，记作$s \sim_{k} t$。\par
-对于一个索引，我们用$RME$（Referential Match Entry）来表示，是由$(refid, start, length, mismatch)$组成的元组，其中$refid$是被引用串id，$start$表示起始位置，$length$表示长度，$mismatch$表示失配处的字符，即表示字符串$s_{refid}(start, length) \circ mismatch$。\par
+一个字符串$s$表示一个关于字符集$\Sigma$的有限序列，长度用$|s|$表示。两个字符串的连接用$s \circ t$表示。从下标$i$开始的长度为$n$的字符串用$s(i, n)$表示，特别的对于长度为$1$的子串（即一个字符）用$s[i]$表示，注意这里的下标从0开始。对于两个字符串$s$与$t$，如果他们之间的编辑距离不超过k，即$s$可以通过至多k次插入、修改、删除操作变为$t$，则称$s$与$t$为k近似，记作$s \sim_{k} t$。\par
+对于一个索引，我们用$RME$（Referential Match Entry）来表示，是由$(refid, start, length, mismatch)$组成的元组，其中$refid$是被引用串id，$start$表示起始位置，$length$表示长度，$mismatch$表示失配处的字符，即代表字符串$s_{refid}(start, length) \circ mismatch$。\par
 对于一个压缩字符串，我们用$RCS$（Referential Compression Sequence）来表示，同时记录下其中每个$RME$的前缀长度$offset_{i}$。
 
 
@@ -262,12 +262,12 @@
 
 
 \section{符号定义}
-有限状态自动机是一种可以识别字符串的数据结构，对于一个自动机$A$，若他能识别字符串$s$，则记$A(s) = True$，否则$A(s) = False$。自动机由以下几部分构成：$\Sigma$为字符集，$State$表示状态集合，$Init$为初始状态，$End$为结束状态集合，$Trans$表示状态转移函数。用$trans(S, ch)$表示在状态$S$下读入字符$ch$后所达到的状态，同时令$trans(S, str)$表示在状态$S$下读入字符串$str$后所达到的状态。那么自动机$A$所能识别的字符串就是所有使得$trans(Init, s) \in End$的字符串$s$，记为$Reg(A)$。而从状态$S$开始能识别的字符串，即所有使得$trans(S, s) \in End$的字符串$s$，记为$Reg(S)$。
+有限状态自动机是一种可以识别字符串的数据结构，对于一个自动机$A$，若它能识别字符串$s$，则记$A(s) = True$，否则$A(s) = False$。自动机由以下几部分构成：$\Sigma$为字符集，$State$表示状态集合，$Init$为初始状态，$End$为结束状态集合，$Trans$表示状态转移函数。用$trans(S, ch)$表示在状态$S$下读入字符$ch$后所达到的状态，同时令$trans(S, str)$表示在状态$S$下读入字符串$str$后所达到的状态。那么自动机$A$所能识别的字符串就是所有使得$trans(Init, s) \in End$的字符串$s$，记为$Reg(A)$。而从状态$S$开始能识别的字符串，即所有使得$trans(S, s) \in End$的字符串$s$，记为$Reg(S)$。
 
 
 
 \section{算法原理}
-顾名思义，关于字符串$s$的后缀自动机Suffix Automaton（简称SAM）是一个能识别$s$所有后缀的自动机，即$SAM(t) = True$当且仅当$t$是$s$的后缀。后面会介绍，$SAM$也能用于识别$s$所有的子串。这里，我们只关心最简状态后缀自动机，即状态数最少的自动机。后面会给出证明，它的复杂度是线性的。\par
+顾名思义，关于字符串$s$的后缀自动机Suffix Automaton（简称$SAM$）是一个能识别$s$所有后缀的自动机，即$SAM(t) = True$当且仅当$t$是$s$的后缀。后面会介绍，$SAM$也能用于识别$s$所有的子串。这里，我们只关心最简状态后缀自动机，即状态数最少的自动机。后面会给出证明，它的复杂度是线性的。\par
 对于最简状态后缀自动机$SAM$，我们用$ST(str)$表示$trans(Init, str)$，即从初始状态读入字符串$str$后达到的状态。对于字符串$s$，记它的后缀集合为$Suf$，子串集合为$Fac$。对于任何一个属于$Fac$的字符串$t$，$ST(t)$都对应一个合法的状态，因为可以在后面加入一些字符使其变成$s$的后缀。但我们不能将每个$t \in Fac$都对应一个状态，因为$Fac$的大小是$O(N^2)$的。考虑$ST(t)$所能识别的字符串集合$Reg(ST(t))$，对于$s$的后缀$x \in Suf$，如果$ST(t)$能识别$x$，则$t \circ x \in Suf$，即$Reg(ST(t))$是一些后缀集合。如果我们用$Right(t)$表示子串$t$出现的所有位置的右端点集合，那么$Reg(ST(t))$就完全由$Right(t)$决定。对于两个子串$u, v \in Fac$，如果$Right(u) = Right(v)$，则$ST(u) = ST(v)$。所以一个状态$S$对应所有$Right$集合等于$Right(t)$的字符串。\par
 对于一个下标$r \in Right(t)$，只需要指定子串的长度$len$，就可以确定子串为$s(r - len, len)$。即给定一个状态的$Right$集合，只需要子串长度便可以确定子串。当给定的长度变短时，子串出现的位置可能变多，以至于超出$Right$集合的范围，但必然包含该$Right$集合。反之则得到$Right$集合的子集，我们将保证$Right$集合不变的子串长度范围记为$[Minl, Maxl]$。由此得出对于不同的状态，$Right$集合要么不相交，要么一个是另一个的真子集。不难发现，这种集合构成了树形的关系，我们称之为Parent树，如图\ref{image:partree}所示。\par
 
@@ -391,7 +391,7 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 	\caption{Query interval in IntTree}\label{algo:intquery}
 \end{algorithm}
 
-至此，我们可以对每个字符串都建一棵区间树，用以维护引用该字符串的索引。然后将$PREF$中的结果插入宽度优先搜索队列中，每次取出队头的结果，在它对应的区间树中找出所有覆盖该区间的$RME$，通过$RME$的$offset$计算出结果对应的子串，再将该子串插入搜索队列中，重复上述过程即可。
+至此，我们可以对每个字符串都建一棵区间树，用以维护引用该字符串的索引。然后将$PREF$中的结果插入宽度优先搜索队列中，每次取出队头的结果，在它对应的区间树中找出所有覆盖该区间的$RME$，通过$RME$的$offset$计算出结果对应的子串，再将该子串插入搜索队列中，重复上述过程即可。由于区间树的空间复杂度是$O(N)$的，因此最终占用的空间不会超过所有$RCS$大小的总和。
 
 
 
@@ -575,13 +575,17 @@ $SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂
 \appendix
 
 \begin{thankto}
-
 	\songti\zihao{-4}
-	致谢内容
+	首先，我要对林瀚老师表示衷心的感谢。老师的细心指导，使我渐渐熟悉字符串压缩匹配这一陌生的领域，提出了很多宝贵的建议，对整个毕业设计的完成提供了很大的帮助。老师治学态度严谨，从选题、方法研究、提纲到论文整个过程都严格把关，对我的求学态度产生了深深的影响。\par
+	感谢本科阶段的所有教育和帮助过我的老师们，你们的认真讲解与耐心指导为我的科研活动打下了坚实的基础。\par
+	感谢集训队的马研奋、张健昶同学的帮助与指导，在我遇到困难的时候能够提出有效的建议。\par
+	感谢陈晓燕同学，在论文的撰写过程中给了我很大的帮助，让我受益良多。\par
+	我还要感谢我的父母和家人，在学习和生活上给予我莫大的关心与支持。\par
+	最后，我要感谢其他在这个领域的相关研究人员，你们的工作成果给予了我很大的启示。谢谢你们！
 
 	\vskip 18pt
 	\begin{flushright}
-		作者\\
+		李贝瑀\\
 		\today
 	\end{flushright}
 \end{thankto}
