--- a/tex/main.tex
+++ b/tex/main.tex
@@ -64,14 +64,18 @@
 %第三次过程检查的指导老师意见
 \thirdopinion{可针对不同数据类型进行实验，以此寻找改进的策略。}
 %整体完成情况的指导老师意见
-\overallopinion{\rule{0cm}{4\baselineskip}}
+\overallopinion{
+	本文研究文本压缩和基于压缩文本的相似字符串查询问题，属于文本检索领域的前沿问题. 作者在前人工作的基础上，引入后缀自动机来为引用字符串建立索引，并给出了在这一索引上进行k相似字符串检索的算法. 在DNA和维基历史词条等数据集上的实验表明论文提出的方法达到较好的压缩率和查询时间. 和前人的工作相比，本文方法的优势在于支持字符串的动态插入. 本文研究的课题有一定的难度，作者提出的方法也有创新性，虽然实验部分还不够完善，但整体上是一篇优秀的本科毕业论文.\par
+}
 
 
 
 %指导教师评语
-\instructorcomment{\rule{0cm}{6\baselineskip}}
+\instructorcomment{
+	本文研究文本压缩和基于压缩文本的相似字符串查询问题，属于文本检索领域的前沿问题. 作者在前人工作的基础上，引入后缀自动机来为引用字符串建立索引，并给出了在这一索引上进行k相似字符串检索的算法. 在DNA和维基历史词条等数据集上的实验表明论文提出的方法达到较好的压缩率和查询时间. 和前人的工作相比，本文方法的优势在于支持字符串的动态插入. 本文研究的课题有一定的难度，作者提出的方法也有创新性，虽然实验部分还不够完善，但整体上是一篇优秀的本科毕业论文.\par
+}
 %指导教师给予的成绩评定
-\instructorgrade{\rule{0cm}{2\baselineskip}}
+\instructorgrade{优\par}
 %答辩小组或专业负责人意见
 \majorcomment{\rule{0cm}{4\baselineskip}}
 %答辩小组或专业负责人给予的成绩评定
